Mon Jun  9 00:14:45 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* pixmaps, gtkgame.c, Makefile.am, configure.in: add expected
	directory structure for the icon. Make a windows .ico file

Sat Jun  7 22:41:53 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix a problem with too many trials done. Be a bit more
	verbose when rolling out in the text interface.

	* gnubg.c: extend the CommandRollout help

Fri Jun  6 17:42:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, show.c, doc/Makefile.am, util.c, util.h: install
	documentation in DOCDIR

Wed Jun  4 20:27:41 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c, show.c, lib/neuralnet.c: minor compiler warnings

Wed Jun  4 14:26:16 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* render.c: fix problems with 2d player turn arrows

Wed Jun  4 10:38:36 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, board3d/Makefile.am, configure.in: do "PKGDATADIR" the
	recommended way

Wed May 14 10:19:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c, sound.h: Make the quiet option work again.

Mon May  5 16:29:51 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, relational.c, play.c: cleanup of the UserCommand function.
	Avoid using UserCommand outside gtk.

Mon May  5 09:36:34 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* record.c: fix illegal g_free in RecordRead

Sun May  4 21:53:07 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: cleanup use of the word 'session' 

Sat May  3 00:07:21 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, play.c: allow double command to be used for beavers.
	Merge double/beaver menu items. Merge take/pass with accept/reject
	resignation menu items.

Tue Apr 29 22:46:50 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gtkwindows.c: change GTKMessage to use gtk_text_view and fix a
	sizing problem on the way.

Tue Apr 29 13:11:02 CEST 2008 Christian Anthon <anthon@kiku.dk>
