@@ -1,4 +1,5 @@
 gnubgiconsdir = $(datadir)
+gnubgpixmapsdir = $(pkgdatadir)/pixmaps
 
 ICONS_16_SCALABLE = icons/hicolor/16x16/apps/scalable/gnubg.svg
 ICONS_16 = icons/hicolor/16x16/apps/gnubg.png
@@ -10,6 +11,8 @@ ICONS_32_SCALABLE = icons/hicolor/32x32/apps/scalable/gnubg.svg
 ICONS_32 = icons/hicolor/32x32/apps/gnubg.png
 ICONS_48_SCALABLE = icons/hicolor/48x48/apps/scalable/gnubg.svg
 ICONS_48 = icons/hicolor/48x48/apps/gnubg.png
+
+PIXMAPS = gnubg-big.png
 
 EXTRA_DIST = \
 	     gnubg.ico \
@@ -25,3 +28,5 @@ nobase_dist_gnubgicons_DATA = \
 			      $(ICONS_24) \
 			      $(ICONS_32) \
 			      $(ICONS_48)
+
+gnubgpixmaps_DATA = $(PIXMAPS)
